# Specification-Based-Testing-of-RESTful-APIs

./: .gitignore  ASTVis.hpp  CMakeLists.txt  Case Study 1  CloneVisitor.hpp  IMA.hpp  PrintVisitor.hpp  a.out  algo.cpp  algo.hpp  ast.hpp  ast_tests.cpp  atc_ast.hpp  cloneHelper.hpp  ima  jsCodeGen.hpp  jsCodeHeader.js  output.js  output.txt  package-lock.json  run.sh  statechart.js  symbol_table.hpp  test.cpp  testIMA  testIMA.cpp  test_libapplication  test_libapplication.cpp  visitor.hpp
js code generator/: jsCodeGen.cpp  jsCodeGen.h
jsCodeGenerator/: beautify.js  code1.txt  code1_beautify.js  commands.txt  helpers.js  jsCodeGen.cpp  jsCodeGen.h  test.cpp  testUtils.js  test_program  visitor.h
library_apispec_examples/: Entry.hpp
library_apispec_examples/heavy_examples/: 1.hpp  10.hpp  11.hpp  2.hpp  3.hpp  4.hpp  5.hpp  6.hpp  7.hpp  8.hpp
library_apispec_examples/light_examples/: 1.hpp  2.hpp  3.hpp
testPaths/: ima_paths  p1  p2  p3  p4  path1.cpp  path2.cpp  path3.cpp  path4.cpp
testPaths/webApp1/: a.out  path1  path1.cpp  path2.cpp  path3.cpp  path4.cpp
testPaths/webApp2/: a.out  jscode.js  path1  path1.cpp
unit_tests/: test.cpp  test_decl_clone.cpp  test_program.cpp
